FIX BUG set_keepalive

--- a/doc/mds_nginx_conf/nginx.conf
+++ b/doc/mds_nginx_conf/nginx.conf
@@ -31,7 +31,6 @@ http {
 			 content_by_lua_file conf/release.lua;
 		}
 		
-		
 		#领导端查询所有库存组织数据
 		location /groupsumvalue {
 			content_by_lua_file conf/bossrelease.lua;
@@ -43,7 +42,14 @@ http {
 		location /test {
 			content_by_lua_file conf/test.lua;
 		}
-		
+		#token设定
+		location /tokenset {
+			content_by_lua_file conf/tokenset.lua;
+		}
+		#token获取
+		location /tokenget {
+			content_by_lua_file conf/tokenget.lua;
+		}
 		location /{
 			root /opt/apps/dist;
 			access_log off;
@@ -55,7 +61,9 @@ http {
 			access_log off;
 			expires 15d;
 		}
-		
+		location /servlet{
+			proxy_pass  http://127.0.0.1:28080;
+		}
 		location /api{
 			proxy_pass  http://127.0.0.1:28080;
 		}
